--- a/InventarioPro/Client/Pages/Categoria/FormCategoria.razor
+++ b/InventarioPro/Client/Pages/Categoria/FormCategoria.razor
@@ -7,34 +7,22 @@
 @using System.ComponentModel.DataAnnotations
 
 
-<div class="modal d-flex justify-content-center align-items-center show" style="display: block;" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" style="max-width: 400px; width: 100%;">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Formulario</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <EditForm Model="@categoria_DTO" OnValidSubmit="Guardar">
-                    <DataAnnotationsValidator />
 
-                    <div class="mb-3">
-                        <label for="nombre" class="form-label font-weight-bold">Nombre</label>
-                        <RadzenTextBox id="nombre" @bind-Value="categoria_DTO.Nombre" Placeholder="Ingrese su nombre" class="form-control" />
-                        <ValidationMessage For="@(() => categoria_DTO.Nombre)" class="text-danger" />
-                    </div>
+<EditForm Model="@categoria_DTO" OnValidSubmit="Guardar">
+    <DataAnnotationsValidator />
 
-                    <div class="d-flex justify-content-between mt-4">
-                        <RadzenButton ButtonType="Radzen.ButtonType.Submit" Text="Guardar" Icon="save" class="btn btn-primary" />
-                        <RadzenButton Text="Cancelar" Icon="cancel" Click="@Cancelar" class="btn btn-secondary" />
-                    </div>
-                </EditForm>
-            </div>
-        </div>
+    <div class="mb-3">
+        <label for="nombre" class="form-label font-weight-bold">Nombre</label>
+        <RadzenTextBox id="nombre" @bind-Value="categoria_DTO.Nombre" Placeholder="Nombre" class="form-control" />
+        <ValidationMessage For="@(() => categoria_DTO.Nombre)" class="text-danger" />
     </div>
-</div>
+
+    <div class="d-flex justify-content-between mt-4">
+        <RadzenButton ButtonType="Radzen.ButtonType.Submit" Text="Guardar" Icon="save" class="btn btn-primary" />
+        <RadzenButton Text="Cancelar" Icon="cancel" Click="@Cancelar" class="btn btn-secondary" />
+    </div>
+</EditForm>
+                            
 
 
 @code {
