--- a/InventarioPro/Client/Shared/MainLayout.razor
+++ b/InventarioPro/Client/Shared/MainLayout.razor
@@ -40,24 +40,21 @@
             <RadzenPanelMenuItem Text="Ventas" Icon="assignment" Path="/ListVentas" Style="color: white;" />
             <RadzenPanelMenuItem Text="Reportes" Icon="assessment" Style="color: white;" />
             <RadzenPanelMenuItem Icon="settings" Text="Configuración" Style="background-color: transparent; color: white;">
-                <RadzenPanelMenu Style="background-color: #002050; color: white;">
-                    <RadzenPanelMenuItem Text="Usuarios" Icon="person" Path="/Usuarios" Class="menu-item" />
+                <RadzenPanelMenu Style="background-color: #002050; color: blue;">
+                    <RadzenPanelMenuItem Text="Usuarios" Icon="person" Path="/ListUsuario" Class="menu-item" />
                     <RadzenPanelMenuItem Text="Roles" Icon="assignment_ind" Path="/Roles" Class="menu-item" />
                     <RadzenPanelMenuItem Text="Empresa" Icon="business" Path="/FormEmpresa" Class="menu-item" />
                 </RadzenPanelMenu>
             </RadzenPanelMenuItem>
-
         </RadzenPanelMenu>
     </RadzenSidebar>
 
-    <!-- Body mantiene estilos predeterminados -->
+
     <RadzenBody Style="grid-area: rz-body;">
         @Body
     </RadzenBody>
 </RadzenLayout>
-<style>
 
-</style>
 
 @code {
     private bool leftSidebarExpanded = true;
