--- a/InventarioPro/Client/Shared/MainLayout.razor
+++ b/InventarioPro/Client/Shared/MainLayout.razor
@@ -42,7 +42,7 @@
             <RadzenPanelMenuItem Icon="settings" Text="Configuración" Style="background-color: transparent; color: white;">
                 <RadzenPanelMenu Style="background-color: #002050; color: blue;">
                     <RadzenPanelMenuItem Text="Usuarios" Icon="person" Path="/ListUsuario" Class="menu-item" />
-                    <RadzenPanelMenuItem Text="Roles" Icon="assignment_ind" Path="/Roles" Class="menu-item" />
+                    <RadzenPanelMenuItem Text="Roles" Icon="assignment_ind" Path="/ListRoles" Class="menu-item" />
                     <RadzenPanelMenuItem Text="Empresa" Icon="business" Path="/FormEmpresa" Class="menu-item" />
                 </RadzenPanelMenu>
             </RadzenPanelMenuItem>
